--- a/presentation/wealth_of_nations.ipynb
+++ b/presentation/wealth_of_nations.ipynb
@@ -1,9 +1,86 @@
-from won.config import DEFAULT_INDICATORS
-from won.data import fetch_many
-from won.transform import latest_complete, correlation_matrix
-from won.viz import timeseries, scatter_rel, choropleth_latest
-
-panel = fetch_many(DEFAULT_INDICATORS, date="1960:2023")
-latest = latest_complete(panel, min_cols=2)
-corr = correlation_matrix(latest)
-corr
+{
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": ["# Wealth of Nations — Analysis"]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from won.config import DEFAULT_INDICATORS\n",
+        "from won.data import fetch_many\n",
+        "from won.transform import latest_complete, correlation_matrix\n",
+        "from won.viz import timeseries, scatter_rel, choropleth_latest"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "panel = fetch_many(DEFAULT_INDICATORS, date=\"1960:2023\")\n",
+        "panel.head()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "latest = latest_complete(panel, min_cols=2)\n",
+        "latest.head()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "corr = correlation_matrix(latest)\n",
+        "corr"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "_ = timeseries(panel, iso3c=\"USA\", y=\"life_exp\", title=\"Life Expectancy — USA\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "fig = scatter_rel(latest, x=\"gdp_pc\", y=\"life_exp\", title=\"Life Expectancy vs GDP per Capita (latest)\")\n",
+        "fig.show()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "fig_map = choropleth_latest(latest, value_col=\"life_exp\", title=\"Life Expectancy (latest)\")\n",
+        "fig_map.show()"
+      ]
+    }
+  ],
+  "metadata": {
+    "kernelspec": { "display_name": "Python 3", "language": "python", "name": "python3" },
+    "language_info": { "name": "python", "version": "3.x" }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 5
+}
