--- a/presentation/wealth_of_nations.ipynb
+++ b/presentation/wealth_of_nations.ipynb
@@ -23,6 +23,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "# Load full panel (includes iso3c, country, year, indicators)\n",
         "panel = fetch_many(DEFAULT_INDICATORS, date=\"1960:2023\")\n",
         "panel.head()"
       ]
@@ -33,6 +34,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "# Latest complete row per country (keeps country names)\n",
         "latest = latest_complete(panel, min_cols=2)\n",
         "latest.head()"
       ]
@@ -43,6 +45,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "# Correlations among indicators (latest complete)\n",
         "corr = correlation_matrix(latest)\n",
         "corr"
       ]
@@ -53,6 +56,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "# Example time series for USA\n",
         "_ = timeseries(panel, iso3c=\"USA\", y=\"life_exp\", title=\"Life Expectancy — USA\")"
       ]
     },
@@ -62,7 +66,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "fig = scatter_rel(latest, x=\"gdp_pc\", y=\"life_exp\", title=\"Life Expectancy vs GDP per Capita (latest)\")\n",
+        "# Scatter relationship (hover shows country if column exists)\n",
+        "fig = scatter_rel(latest, x=\"gdp_pc\", y=\"life_exp\",\n",
+        "                  title=\"Life Expectancy vs GDP per Capita (latest complete)\")\n",
         "fig.show()"
       ]
     },
@@ -72,17 +78,29 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "fig_map = choropleth_latest(latest, value_col=\"life_exp\", title=\"Life Expectancy (latest)\")\n",
+        "# Map should use latest AVAILABLE per country for this indicator\n",
+        "map_col = \"life_exp\"\n",
+        "d = panel[[\"iso3c\", \"country\", \"year\", map_col]].dropna(subset=[map_col])\n",
+        "idx = d.groupby(\"iso3c\")[\"year\"].idxmax()\n",
+        "map_df = d.loc[idx].reset_index(drop=True)\n",
+        "\n",
+        "fig_map = choropleth_latest(map_df, value_col=map_col,\n",
+        "                             title=\"Life Expectancy (latest available)\")\n",
         "fig_map.show()"
       ]
     }
-
   ],
   "metadata": {
-    "kernelspec": { "display_name": "Python 3", "language": "python", "name": "python3" },
-    "language_info": { "name": "python", "version": "3.x" }
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.x"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 5
 }
-
